[package]
name = "kvs"
version = "0.1.0"
authors = ["Mu00 <mu001999@outlook.com>"]
description = "A key-value store"
edition = "2021"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
failure = "0.1.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
structopt = "0.3.25"
