[package]
name = "kvs"
version = "0.1.0"
authors = ["Mu00 <mu001999@outlook.com>"]
description = "A key-value store"
edition = "2021"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
slog = "2.7.0"
sloggers = "2.1.1"
structopt = "0.3.25"
thiserror = "1.0.30"
walkdir = "2.2.7"

[features]
