[package]
name = "kvs"
version = "0.1.0"
authors = ["Mu00 <mu001999@outlook.com>"]
description = "A key-value store"
edition = "2021"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.5"
crossbeam-utils = "0.8.5"
panic-control = "0.1.4"
predicates = "1.0.0"
rand = "0.8.4"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
crossbeam-channel = "0.5.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
sled = "0.34.7"
slog = "2.7.0"
sloggers = "2.1.1"
structopt = "0.3.25"
thiserror = "1.0.30"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
